--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 <head>
   <meta charset="utf-8">
   <title>Calculator</title>
-  <link rel="stylesheet" href="C:\Users\ASUS\Desktop\Calculator\calc.css">
+  <link rel="stylesheet" href="./calc.css">
 
 </head>
 
@@ -45,7 +45,7 @@
 
 </div>
 </div>
-<script type="text/javascript" src="C:\Users\ASUS\Desktop\Calculator\calc.js" defer></script>
+<script type="text/javascript" src="./calc.js" defer></script>
 </body>
 
 </html>
